--- a/chatgpt-bootstrap/src/main/resources/application-dev.yaml
+++ b/chatgpt-bootstrap/src/main/resources/application-dev.yaml
@@ -12,9 +12,9 @@ spring:
 
 chat:
   # OpenAI API Key - https://platform.openai.com/account/api-keys
-  openai_api_key: ${CHAT_OPENAI_API_KEY:}
+  openai_api_key: ${CHAT_OPENAI_API_KEY:xxx}
   # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
-  openai_access_token: ${CHAT_OPENAI_ACCESS_TOKEN:}
+  openai_access_token: ${CHAT_OPENAI_ACCESS_TOKEN:xxx}
   # OpenAI API Base URL - https://api.openai.com/，要加/后缀
   openai_api_base_url: ${CHAT_OPENAI_API_BASE_URL:https://api.openai.com/}
   # API Model - https://platform.openai.com/docs/models apiKey 和 AccessToken mode 不一样
@@ -45,13 +45,13 @@ chat:
 # 邮箱验证相关
 email:
   # SMTP 服务器地址
-  host: ${EMAIL_HOST:xxxxxx}
+  host: ${EMAIL_HOST:smtp.qq.com}
   # 端口
   port: ${EMAIL_PORT:465}
   # 发件人前缀
-  from: ${EMAIL_FROM:xxxxxx}
+  from: ${EMAIL_FROM:saury}
   # 用户名
-  user: ${EMAIL_USER:xxxxxx}
+  user: ${EMAIL_USER:sauryzxw@foxmail.com}
   # 如果要授权码，这里就是传授权码
   pass: ${EMAIL_PASS:}
   # 是否需要授权，决定是否要设置授权码
@@ -59,7 +59,7 @@ email:
   # 邮箱验证码有效期（单位，分钟）
   verifyCodeExpireMinutes: ${EMAIL_CODE_EXPIRE_MINUTES:15}
   # 邮箱验证，跳转地址路径
-  verificationRedirectUrl: ${EMAIL_VERIFY_REDIRECT_URL:http://localhost:1002/#/emailValidation?type=email&verifyCode=}
+  verificationRedirectUrl: ${EMAIL_VERIFY_REDIRECT_URL:http://localhost:1002/emailValidation?type=email&verifyCode=}
 sa-token:
   # 前端用户登录，用于加密 JWT
   jwt-secret-key: ${JWT_SECRET:StarGPT}
